frontend_tests/negative/unused_import/go.mod
module example.com/renvotests/negative/unused_import

go 1.25
